# bookerboard

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  install.sh
dashboard/: .env.production  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: Layout.tsx  StarPicker.tsx
dashboard/src/lib/: api.ts  auth.tsx  styles.ts  theme.tsx
dashboard/src/types/: index.ts
dashboard/src/views/: CardBuilderView.tsx  InjuryAlertsView.tsx  LoginView.tsx  NarrativeThreadsView.tsx  StarRosterView.tsx  YearOverviewView.tsx
docs/: architecture.md  decisions.md  domain-knowledge.md  ui-spec.md
services/api/: go.mod  main.go
services/api/config/: config.go
services/api/internal/auth/: jwt.go
services/api/internal/db/: backup_plan_repository.go  card_repository.go  db.go  narrative_thread_repository.go  overview_repository.go  star_repository.go  todo_repository.go  user_repository.go
services/api/internal/handler/: auth.go  card.go  health.go  injury.go  narrative_thread.go  overview.go  solver_client.go  star.go  todo.go
services/api/internal/middleware/: auth.go
services/api/internal/model/: backup_plan.go  card.go  segment.go  (+2 more)
services/db/: schema.sql  seed.sql
services/fan-score/: go.mod  go.sum  handler_test.go  main.go
services/fan-score/db/: writer.go
services/fan-score/fetcher/: reddit.go  trends.go
services/scraper/: Cargo.toml
services/scraper/.cargo/: config.toml
services/scraper/src/: db.rs  main.rs  scraper.rs
services/solver/: pom.xml
(+14 files in other folders)
