[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls"] }
scraper = { version = "0.23", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime"] }
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true